src/test/ui/const-generics/array-size-in-generic-struct-param.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/array-size-in-generic-struct-param.rs:9:48
   |
LL | struct ArithArrayLen<const N: usize>([u32; 0 + N]);
   |                                                ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: generic parameters may not be used in const operations
  --> $DIR/array-size-in-generic-struct-param.rs:20:15
   |
LL |     arr: [u8; CFG.arr_size],
   |               ^^^ cannot perform const operation using `CFG`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `CFG`

error: `Config` is forbidden as the type of a const generic parameter
  --> $DIR/array-size-in-generic-struct-param.rs:18:21
   |
LL | struct B<const CFG: Config> {
   |                     ^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 3 previous errors

